# geng

./: .gitignore  .justfile  CHANGELOG.md  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  docker.sh  examples.css  flake.nix  index.html  menus.js  robots.txt  sitemap.xml  sus.css  test.html
.cargo/: config.toml
cargo-geng/: Cargo.toml  Dockerfile  cargo.config  install-osxcross.sh
cargo-geng/src/: index.html  main.rs
core/: Cargo.toml
core/derive/: Cargo.toml
core/derive/src/: assets.rs  lib.rs
core/src/: context.rs  lib.rs  obj.rs  sound.rs  texture_atlas.rs
core/src/asset/: mod.rs  native.rs  web.rs
core/src/draw_2d/: color.glsl  mod.rs  textured.glsl
core/src/font/: mod.rs
core/src/loading_screen/: empty.rs  mod.rs
core/src/shader_lib/: mod.rs
core/src/shader_lib/include/: prelude.glsl
core/src/state/: manager.rs  mod.rs
core/src/window/: cursor.rs  mod.rs  web.js
core/src/window/events/: mod.rs  native.rs  web.rs
crates/android-test/: Cargo.toml
crates/android-test/src/: lib.rs
crates/batbox/: Cargo.toml  LICENSE
crates/batbox-android/: Cargo.toml
crates/batbox-android/src/: lib.rs
crates/batbox-cli/: Cargo.toml
crates/batbox-cli/src/: lib.rs
crates/batbox-cmp/: Cargo.toml
crates/batbox-cmp/src/: lib.rs
crates/batbox-collection/: Cargo.toml
crates/batbox-collection/derive/: Cargo.toml
crates/batbox-collection/derive/src/: lib.rs
crates/batbox-collection/src/: lib.rs
crates/batbox-derive/: Cargo.toml
crates/batbox-derive/src/: diff.rs  has_id.rs  i18n.rs  lib.rs
crates/batbox-diff/: Cargo.toml
crates/batbox-diff/derive/: Cargo.toml
crates/batbox-diff/derive/src/: lib.rs
crates/batbox-diff/src/: lib.rs
crates/batbox-file/: Cargo.toml
crates/batbox-file-dialog/: Cargo.toml
crates/batbox-file-dialog/src/: lib.rs
crates/batbox-file/src/: lib.rs
crates/batbox-i18n/: Cargo.toml
crates/batbox-i18n/macro/: Cargo.toml
crates/batbox-i18n/macro/src/: lib.rs
crates/batbox-i18n/src/: lib.rs
crates/batbox-i18n/tests/: main.rs  translations.toml
crates/batbox-la/: Cargo.toml
crates/batbox-la/src/: aabb.rs  angle.rs  lib.rs
crates/batbox-la/src/mat/: mod.rs
crates/batbox-la/src/mat/_3x3/: extra.rs  mod.rs  ops.rs  projection.rs  transform.rs
crates/batbox-la/src/mat/_4x4/: extra.rs  mod.rs  ops.rs  transform.rs
crates/batbox-la/src/quat/: mod.rs
crates/batbox-la/src/vec/: _2d.rs  _3d.rs  _4d.rs  mod.rs
crates/batbox-lapp/: Cargo.toml
crates/batbox-lapp/src/: chain.rs  fit.rs  lib.rs  segment.rs  transform.rs
crates/batbox-lapp/src/curve/: trajectory.rs
crates/batbox-logger/: Cargo.toml
crates/batbox-logger/src/: lib.rs
crates/batbox-num/: Cargo.toml
crates/batbox-num/src/: float.rs  lib.rs  real.rs
crates/batbox-preferences/: Cargo.toml
crates/batbox-preferences/src/: lib.rs
crates/batbox-time/: Cargo.toml
crates/batbox-time/src/: lib.rs
crates/batbox/derive/src/: diff.rs
crates/batbox/src/: approx.rs  autosave.rs  cmp.rs  collection.rs  dialog.rs  diff.rs  file.rs  future_ext.rs  i18n.rs  lib.rs  load_file.rs  localization.rs  logger.rs  preferences.rs  prelude.rs  program_args.rs  range.rs  result_ext.rs  rng.rs  time.rs  transform.rs  util.rs
crates/batbox/src/color/: component.rs  consts.rs  hsl.rs  hsv.rs  mod.rs  rgba.rs
crates/batbox/src/geom/: aabb.rs  chain.rs  ellipse.rs  mod.rs  quad.rs  rect.rs  segment.rs  transform.rs
crates/batbox/src/geom/curve/: cardinal.rs  mod.rs  parabola.rs  trajectory.rs
crates/batbox/src/geom/mat/_3x3/: mod.rs
crates/batbox/src/geom/mat/_4x4/: extra.rs  mod.rs  projection.rs  transform.rs
crates/batbox/src/geom/mat/mat3/: extra.rs  mod.rs  ops.rs  projection.rs  transform.rs
crates/batbox/src/geom/mat/mat4/: extra.rs  mod.rs  ops.rs  projection.rs  transform.rs
crates/batbox/src/geom/quat/: mod.rs
crates/batbox/src/geom/vec/: _2d.rs  _3d.rs  _4d.rs  vec2.rs  vec3.rs  vec4.rs
crates/batbox/src/num/: float.rs  mod.rs  real.rs
crates/batbox/src/updater/: mod.rs
crates/batbox/tests/i18n/: main.rs
crates/bug/: Cargo.toml
crates/bug/src/: main.rs
crates/cargo-geng/: Cargo.toml
crates/cargo-geng/src/: cargo_geng.rs  index.html  main.rs
crates/geng-asset/: Cargo.toml
crates/geng-asset/derive/: Cargo.toml
crates/geng-asset/derive/src/: lib.rs
crates/geng-asset/src/: hot.rs  lib.rs
crates/geng-asset/src/platform/: mod.rs  native.rs  web.rs
debug_overlay/: Cargo.toml
debug_overlay/src/: console.rs  fps_counter.rs  lib.rs
derive/: Cargo.toml
derive/src/: assets.rs  configurable.rs  diff.rs  lib.rs  uniforms.rs  vertex.rs
examples/: 01_blank.rs  02_hello_world.rs  03_moving.rs  04_camera_controls.rs  blank.rs  custom_font_shader.rs  hello_world.rs  index.html  multiplayer.rs  text_input.rs  transparent.rs
gl/: Cargo.toml
net/: Cargo.toml
net/src/: lib.rs
net/src/client/: mod.rs  native.rs  web.rs
net/src/server/: mod.rs
pages/: index.html
raw/: Cargo.toml
raw/gl/: Cargo.toml  build.rs
raw/src/: lib.rs
raw/src/gl/: buffer.rs  draw.rs  framebuffer.rs  mod.rs  renderbuffer.rs  uniform_attribute.rs  vao.rs
raw/src/webgl/: buffer.rs  draw.rs  framebuffer.rs  mod.rs  program_shader.rs  renderbuffer.rs  state.rs  texture.rs  uniform_attribute.rs
raw/webgl/: Cargo.toml
src/: approx.rs  autosave.rs  collection.rs  context.rs  diff.rs  error.rs  future_ext.rs  lib.rs  localization.rs  logger.rs  obj.rs  program.rs  program_args.rs  rng.rs  shader.rs  sound.rs  texture_atlas.rs  timer.rs
ugl/: Cargo.toml
ugl/src/: lib.rs
ugl/src/gl/: program_shader.rs  state.rs  texture.rs  uniform_attribute.rs  vao.rs
ugl/src/webgl/: constants.rs  framebuffer.rs  state.rs
ui/: Cargo.toml
ui-macros/: Cargo.toml
ui/derive/: Cargo.toml
ui/derive/src/: configurable.rs  lib.rs
ui/src/: config.rs  lib.rs  theme.rs  widget.rs
ui/src/layout_widgets/: align.rs  column.rs  constraint_override.rs  mod.rs  padding.rs  row.rs  stack.rs
ui/src/widgets/: button.rs  color_box.rs  event_handler.rs  mod.rs  slider.rs  text.rs  text_button.rs  texture.rs  texture_button.rs
(+482 files in other folders)
