[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["kuviman <kuviman@gmail.com>"]
categories = ["game-engines"]
description = "Game ENGine"
# documentation = ""
edition = "2021"
homepage = "https://geng.kuviman.com"
keywords = ["game", "engine", "gamedev", "geng"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geng-engine/geng"
version = "0.15.0"

[workspace.dependencies]
# Batbox
batbox = { version = "0.15", path = "crates/batbox" }
batbox-android = { version = "0.15", path = "crates/batbox-android" }
batbox-tuple-macros = { version = "0.15", path = "crates/batbox-tuple-macros" }
batbox-i18n = { version = "0.15", path = "crates/batbox-i18n" }
batbox-i18n-macro = { version = "0.15", path = "crates/batbox-i18n/macro" }
batbox-num = { version = "0.15", path = "crates/batbox-num" }
batbox-approx = { version = "0.15", path = "crates/batbox-approx" }
batbox-color = { version = "0.15", path = "crates/batbox-color" }
batbox-time = { version = "0.15", path = "crates/batbox-time" }
batbox-file = { version = "0.15", path = "crates/batbox-file" }
batbox-file-dialog = { version = "0.15", path = "crates/batbox-file-dialog" }
batbox-preferences = { version = "0.15", path = "crates/batbox-preferences" }
batbox-cli = { version = "0.15", path = "crates/batbox-cli" }
batbox-logger = { version = "0.15", path = "crates/batbox-logger" }
batbox-diff = { version = "0.15", path = "crates/batbox-diff" }
batbox-diff-derive = { version = "0.15", path = "crates/batbox-diff/derive" }
batbox-collection = { version = "0.15", path = "crates/batbox-collection" }
batbox-collection-derive = { version = "0.15", path = "crates/batbox-collection/derive" }
batbox-range = { version = "0.15", path = "crates/batbox-range" }
batbox-cmp = { version = "0.15", path = "crates/batbox-cmp" }
batbox-la = { version = "0.15", path = "crates/batbox-la" }
batbox-lapp = { version = "0.15", path = "crates/batbox-lapp" }

# Geng
geng = { version = "0.15", path = "." }
geng-audio = { version = "0.15", path = "crates/geng-audio" }
geng-window = { version = "0.15", path = "crates/geng-window" }
geng-net = { version = "0.15", path = "crates/geng-net" }
geng-net-simple = { version = "0.15", path = "crates/geng-net-simple" }
geng-camera = { version = "0.15", path = "crates/geng-camera" }
geng-font = { version = "0.15", path = "crates/geng-font" }
geng-shader = { version = "0.15", path = "crates/geng-shader" }
geng-state = { version = "0.15", path = "crates/geng-state" }
geng-async-state = { version = "0.15", path = "crates/geng-async-state" }
geng-ui = { version = "0.15", path = "crates/geng-ui" }
geng-draw2d = { version = "0.15", path = "crates/geng-draw2d" }
geng-obj = { version = "0.15", path = "crates/geng-obj" }
geng-debug-overlay = { version = "0.15", path = "crates/geng-debug-overlay", package = "geng-debug_overlay" }
geng-asset = { version = "0.15", path = "crates/geng-asset" }
geng-asset-derive = { version = "0.15", path = "crates/geng-asset/derive" }
geng-texture-atlas = { version = "0.15", path = "crates/geng-texture-atlas" }

# Ugli
ugli = { version = "0.15", path = "crates/ugli" }
ugli-derive = { version = "0.15", path = "crates/ugli-derive" }
ugli-raw = { version = "0.15", path = "crates/ugli-raw" }

switch-resume = "0.1"

# Common
scoped-tls = { version = "0.1", package = "scoped-tls-hkt" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
toml = "0.5"
ron = "0.8"
rand = "0.8"
# https://github.com/rust-random/rand#wasm-support
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
clap = { version = "4", features = ["derive"] }
url = "2"
futures = "0.3"
async-executor = "1"
async-broadcast = "0.5"
async-recursion = "1"
pin-utils = "0.1"
once_cell = "1"
bincode = "1"
dyn-clone = "1"
maplit = "1"
env_logger = "0.10"
backtrace = "0.3"
thiserror = "1"
anyhow = { version = "1", features = ["backtrace"] } # TODO: eyre?
async-trait = "0.1"
derive_more = "0.99"
strum = { version = "0.25", features = ["derive"] }
itertools = "0.10"
derivative = "2"
rusttype = { version = "0.9", features = [
  "gpu_cache",
] } # TODO: not used anymore?
ttf-parser = "0.18"
lazy_static = "1" # TODO remove
flate2 = "1"
atomic_float = "0.1"
num_enum = "0.5"
gltf = "1"
http = "0.2"
gilrs = { version = "0.10", features = ["serde-serialize"] }

# Native
libc = "0.2"
tinyfiledialogs = { version = "3", default-features = false }
directories = "4"
image = "0.24"
winit = "=0.29.0-beta.0"
raw-window-handle = "0.5"
glutin-winit = "0.4.0-beta.0"
glutin = "0.30"
threadpool = "1"
num_cpus = "1"
notify = "5"
rodio = { version = "0.17", package = "geng-rodio" }
ws = "0.9"
gl = "0.14"
field-offset = "0.3"
async-std = "1"
reqwest = { version = "0.11", features = [
  "stream",
  "rustls-tls",
], default-features = false }
async-compat = "0.2"

# Web
wasm-opt = "0.110"
wasm-bindgen-cli-support = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = "0.3"
wasm-streams = "0.3"

# Proc macros
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.14"

# android
android-activity = { version = "0.4", features = ["native-activity"] }
oboe = { version = "0.5", features = ["java-interface", "shared-stdcxx"] }
jni = "0.21.1"
ndk-context = "0.1.1"
ndk = "0.7"

[package]
name = "geng"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["audio"]
audio = ["dep:geng-audio"]

[dev-dependencies]
gltf.workspace = true

[dependencies]
batbox.workspace = true
geng-window.workspace = true
geng-net.workspace = true
geng-camera.workspace = true
geng-shader.workspace = true
geng-font.workspace = true
geng-audio = { workspace = true, optional = true }
geng-ui.workspace = true
geng-state.workspace = true
geng-async-state.workspace = true
geng-draw2d.workspace = true
geng-obj.workspace = true
geng-debug-overlay.workspace = true
geng-asset.workspace = true
geng-texture-atlas.workspace = true
ugli.workspace = true

gilrs.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
