[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["kuviman <kuviman@gmail.com>"]
categories = ["game-engines"]
description = "Game ENGine"
# documentation = ""
edition = "2021"
homepage = "https://geng.kuviman.com"
keywords = ["game", "engine", "gamedev", "geng"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geng-engine/geng"
version = "0.16.0"

[workspace.dependencies]
# Batbox
batbox = "0.16"
batbox-android = "0.16"
batbox-tuple-macros = "0.16"
batbox-i18n = "0.16"
batbox-i18n-macro = "0.16"
batbox-num = "0.16"
batbox-approx = "0.16"
batbox-color = "0.16"
batbox-time = "0.16"
batbox-file = "0.16"
batbox-file-dialog = "0.16"
batbox-preferences = "0.16"
batbox-cli = "0.16"
batbox-logger = "0.16"
batbox-diff = "0.16"
batbox-diff-derive = "0.16"
batbox-collection = "0.16"
batbox-collection-derive = "0.16"
batbox-range = "0.16"
batbox-cmp = "0.16"
batbox-la = "0.16"
batbox-lapp = "0.16"

# Ugli
ugli = { version = "0.16.0", path = "crates/ugli" }
ugli-derive = { version = "0.16", path = "crates/ugli-derive" }
ugli-raw = { version = "0.16", path = "crates/ugli-raw" }

# Geng
geng = { version = "0.16.0", path = "." }
geng-audio = { version = "0.16", path = "crates/geng-audio" }
geng-window = { version = "0.16.0", path = "crates/geng-window" }
geng-net = { version = "0.16.0", path = "crates/geng-net" }
geng-net-simple = { version = "0.16.0", path = "crates/geng-net-simple" }
geng-camera = { version = "0.16.0", path = "crates/geng-camera" }
geng-font = { version = "0.16.0", path = "crates/geng-font" }
geng-shader = { version = "0.16.0", path = "crates/geng-shader" }
geng-state = { version = "0.16.0", path = "crates/geng-state" }
geng-async-state = { version = "0.16.0", path = "crates/geng-async-state" }
geng-ui = { version = "0.16.0", path = "crates/geng-ui" }
geng-draw2d = { version = "0.16.0", path = "crates/geng-draw2d" }
geng-obj = { version = "0.16.0", path = "crates/geng-obj" }
geng-debug-overlay = { version = "0.16.0", path = "crates/geng-debug-overlay", package = "geng-debug_overlay" }
geng-asset = { version = "0.16.0", path = "crates/geng-asset" }
geng-asset-derive = { version = "0.16.0", path = "crates/geng-asset/derive" }
geng-texture-atlas = { version = "0.16.0", path = "crates/geng-texture-atlas" }

switch-resume = "0.1"

# Common
async-recursion = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
derive_more = "0.99"
itertools = "0.11"
anyhow = "1"
log = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
async-trait = "0.1"
once_cell = "1"
bincode = "1"
scoped-tls = { version = "0.1", package = "scoped-tls-hkt" }
async-executor = "1"
async-broadcast = "0.5"
strum = { version = "0.25", features = ["derive"] }
rusttype = { version = "0.9", features = [
  "gpu_cache",
] } # TODO: not used anymore?
ttf-parser = "0.20"
lazy_static = "1" # TODO remove
flate2 = "1"
atomic_float = "0.1"
num_enum = "0.7"
gltf = "1"
gilrs = { version = "0.10", features = ["serde-serialize"] }

# Native
image = "0.24"
winit = "0.29"
raw-window-handle = "0.5"
glutin-winit = "0.4"
glutin = "0.31"
num_cpus = "1"
notify = "6"
rodio = { version = "0.17", package = "geng-rodio" }
ws = "0.9"
gl = "0.14"
field-offset = "0.3"

# Web
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Proc macros
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"

# android

[package]
name = "geng"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["audio"]
audio = ["dep:geng-audio"]

[dev-dependencies]
gltf.workspace = true

[dependencies]
batbox.workspace = true
geng-window.workspace = true
geng-net.workspace = true
geng-camera.workspace = true
geng-shader.workspace = true
geng-font.workspace = true
geng-audio = { workspace = true, optional = true }
geng-ui.workspace = true
geng-state.workspace = true
geng-async-state.workspace = true
geng-draw2d.workspace = true
geng-obj.workspace = true
geng-debug-overlay.workspace = true
geng-asset.workspace = true
geng-texture-atlas.workspace = true
ugli.workspace = true

gilrs.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
