[patch.crates-io]
# https://github.com/smol-rs/async-broadcast/pull/47
async-broadcast = { git = "https://github.com/kuviman/async-broadcast", branch = "fix-wasm-again" }
batbox-tuple-macros = { git = "https://github.com/geng-engine/batbox" }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["kuviman <kuviman@gmail.com>"]
categories = ["game-engines"]
description = "Game ENGine"
# documentation = ""
edition = "2021"
homepage = "https://geng.kuviman.com"
keywords = ["game", "engine", "gamedev", "geng"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geng-engine/geng"
version = "0.18.0"

[workspace.dependencies]
# Batbox
batbox = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-android = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-tuple-macros = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-i18n = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-i18n-macro = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-num = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-approx = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-color = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-time = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-file = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-file-dialog = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-preferences = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-cli = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-logger = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-diff = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-diff-derive = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-collection = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-collection-derive = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-range = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-cmp = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-la = { version = "0.16", git = "https://github.com/geng-engine/batbox" }
batbox-lapp = { version = "0.16", git = "https://github.com/geng-engine/batbox" }

# Ugli
ugli = { version = "0.18", path = "crates/ugli" }
ugli-derive = { version = "0.18", path = "crates/ugli-derive" }
ugli-raw = { version = "0.18", path = "crates/ugli-raw" }

# Geng
geng = { version = "0.18", path = "." }
geng-audio = { version = "0.18", path = "crates/geng-audio" }
geng-window = { version = "0.18", path = "crates/geng-window" }
geng-net = { version = "0.18", path = "crates/geng-net" }
geng-net-simple = { version = "0.18", path = "crates/geng-net-simple" }
geng-camera = { version = "0.18", path = "crates/geng-camera" }
geng-font = { version = "0.18", path = "crates/geng-font" }
geng-shader = { version = "0.18", path = "crates/geng-shader" }
geng-state = { version = "0.18", path = "crates/geng-state" }
geng-async-state = { version = "0.18", path = "crates/geng-async-state" }
geng-ui = { version = "0.18", path = "crates/geng-ui" }
geng-draw2d = { version = "0.18", path = "crates/geng-draw2d" }
geng-obj = { version = "0.18", path = "crates/geng-obj" }
geng-debug-overlay = { version = "0.18", path = "crates/geng-debug-overlay", package = "geng-debug_overlay" }
geng-asset = { version = "0.18", path = "crates/geng-asset", default-features = false }
geng-asset-derive = { version = "0.18", path = "crates/geng-asset/derive" }
geng-texture-atlas = { version = "0.18", path = "crates/geng-texture-atlas" }

geng-web-audio-api = { git = "https://github.com/geng-engine/web-audio-api" }

switch-resume = "0.1"

puffin = "0.19"

# Common
async-recursion = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
derive_more = "0.99"
itertools = "0.13"
anyhow = "1"
log = "0.4"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
async-trait = "0.1"
once_cell = "1"
bincode = "1"
scoped-tls = { version = "0.1", package = "scoped-tls-hkt" }
async-executor = "1"
async-broadcast = "0.7"
strum = { version = "0.26", features = ["derive"] }
ttf-parser = "0.21"
flate2 = "1"
atomic_float = "1"
num_enum = "0.7"
gltf = "1"
base64 = "0.22"
# gilrs = { version = "0.10", features = ["serde-serialize"] }

# Native
image = "0.25"
winit = "0.30"
raw-window-handle = "0.6"
glutin-winit = { git = "https://github.com/rust-windowing/glutin" }
glutin = { git = "https://github.com/rust-windowing/glutin" }
# glutin-winit = "0.4"
# glutin = "0.31"
num_cpus = "1"
notify = "6"
rodio = { version = "0.17", package = "geng-rodio" }
ws = "0.9"
gl = "0.14"
field-offset = "0.3"

# Web
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# Proc macros
darling = "0.20"
proc-macro2 = "1"
quote = "1"
syn = "2"

# android

[package]
name = "geng"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = ["audio"]
audio = ["dep:geng-audio", "geng-asset/audio"]

[dev-dependencies]
gltf.workspace = true

[dependencies]
batbox.workspace = true
geng-window.workspace = true
geng-net.workspace = true
geng-camera.workspace = true
geng-shader.workspace = true
geng-font.workspace = true
geng-audio = { workspace = true, optional = true }
geng-ui.workspace = true
geng-state.workspace = true
geng-async-state.workspace = true
geng-draw2d.workspace = true
geng-obj.workspace = true
geng-debug-overlay.workspace = true
geng-asset.workspace = true
geng-texture-atlas.workspace = true
ugli.workspace = true
image.workspace = true

# gilrs.workspace = true
serde.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true
