[package]
name = "cargo-geng"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (cargo helper)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
tokio = "0.2"
futures = "0.3"
hyper = "0.13"
hyper-staticfile = "0.5"
fs_extra = "1"
cargo_metadata = "0.10"
structopt = "0.3"
anyhow = "1"