[package]
name = "cargo-geng"
version = "0.7.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (cargo helper)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
open = "1"
tokio = { version = "0.3", features = ["rt-multi-thread", "full"] }
tokio-compat-02 = "0.1"
futures = "0.3"
hyper = "0.13"
hyper-staticfile = "0.5"
fs_extra = "1"
cargo_metadata = "0.12"
structopt = "0.3"
anyhow = "1"
