[package]
name = "cargo-geng"
version = "0.8.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (cargo helper)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
open = "1"
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
futures = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.6"
fs_extra = "1"
cargo_metadata = "0.12"
structopt = "0.3"
anyhow = "1"
