[package]
name = "geng-core"
version = "0.4.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (Core)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
batbox = "0.4"
geng-derive = { path = "derive", version = "0.4" }
ugli = "0.4"
rusttype = { version = "0.9", features = [ "gpu_cache" ] }
serde = "1"
lazy_static = "1"
failure = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Document",
    "CssStyleDeclaration",
    "HtmlAudioElement",
    "XmlHttpRequest",
    "KeyboardEvent",
    "MouseEvent",
    "WheelEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "DomRect",
    "DomRectReadOnly",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = "0.23"
glutin = "0.24"
threadpool = "1"
num_cpus = "1"
notify = "4"
rodio = "0.11"