[package]
name = "geng-debug_overlay"
version = "0.4.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (debug overlay)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
geng-core = { path = "../core", version = "0.4" }
geng-ui = { path = "../ui", version = "0.4" }