[package]
name = "geng-net"
version = "0.3.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (networking)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
geng-core = { path = "../core", version = "0.3" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
stdweb = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ws = { version = "0.9" }