[package]
name = "ugli-raw"
version = "0.2.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Universal OpenGL Interface (Raw)"
license = "MIT"
homepage = "https://github.com/kuviman/ugli"
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = { package = "ugli-gl", path = "gl", version = "0.1.0" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AngleInstancedArrays",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGlActiveInfo",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlRenderbuffer",
    "WebGlProgram",
    "WebGlFramebuffer",
    "WebGlShader",
    "HtmlImageElement",
] }