[package]
name = "ugli-raw"
version = "0.6.0-alpha.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Universal OpenGL Interface (Raw)"
license = "MIT"
homepage = "https://github.com/kuviman/ugli"
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "AngleInstancedArrays",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGlActiveInfo",
    "WebGlUniformLocation",
    "WebGlTexture",
    "WebGlRenderbuffer",
    "WebGlProgram",
    "WebGlFramebuffer",
    "WebGlShader",
    "HtmlImageElement",
] }