[package]
name = "ugl"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]
edition = "2018"

[target.'cfg(not(any(target_arch = "asmjs", target_arch = "wasm32")))'.dependencies]
gl = { path = "../gl" }

[target.'cfg(any(target_arch = "asmjs", target_arch = "wasm32"))'.dependencies]
webgl = { path = "../webgl" }
stdweb = "0.4"