[package]
name = "geng-ui"
version = "0.5.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (ui)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
geng-core = { path = "../core", version = "0.5" }
geng-ui-derive = { path = "derive", version = "0.5" }
serde = "1"