[package]
name = "geng-ui"
version = "0.6.0-alpha.1"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (ui)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2018"

[dependencies]
geng-core = { path = "../core", version = "0.6.0-alpha" }
geng-ui-derive = { path = "derive", version = "0.6.0-alpha" }
serde = "1"