[package]
name = "batbox-android"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
android-activity.workspace = true
oboe.workspace = true
jni.workspace = true
ndk-context.workspace = true
