[package]
name = "batbox-cli"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
log.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
# TODO use web api instead of url?
url.workspace = true
web-sys = { workspace = true, features = ["Window", "Location"] }
