[package]
name = "batbox-collection"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
batbox-collection-derive.workspace = true
batbox-diff.workspace = true
serde.workspace = true
