[package]
name = "batbox-derive"
version = "0.9.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Batteries useful for projects (derive macros)"
license = "MIT"
homepage = "https://github.com/kuviman/batbox"
edition = "2021"

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
darling = "0.13"

[lib]
proc-macro = true
