[package]
name = "batbox-logger"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
env_logger.workspace = true
once_cell.workspace = true
backtrace.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen.workspace = true
