[package]
name = "batbox-num"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
rand.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
# https://github.com/rust-random/rand#wasm-support
getrandom.workspace = true
