[package]
name = "batbox-preferences"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
directories.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Storage"] }
