[package]
name = "batbox-time"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Performance", "Window"] }
