[package]
name = "batbox-time"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
async-std.workspace = true

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys.workspace = true
web-sys = { workspace = true, features = ["Performance", "Window"] }
wasm-bindgen-futures.workspace = true
