[package]
name = "batbox"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
batbox-macros.workspace = true
batbox-derive.workspace = true

serde.workspace = true
serde_json.workspace = true
ron.workspace = true
rand.workspace = true
getrandom.workspace = true
log.workspace = true
threadpool.workspace = true
clap.workspace = true
url.workspace = true
futures.workspace = true
pin-utils.workspace = true
once_cell.workspace = true
bincode.workspace = true
dyn-clone.workspace = true
maplit.workspace = true
env_logger.workspace = true
backtrace.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
itertools.workspace = true
derivative.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc.workspace = true
tinyfiledialogs.workspace = true
directories.workspace = true
