[package]
name = "batbox"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
batbox-macros.workspace = true
batbox-derive.workspace = true

# rng
rand.workspace = true
getrandom.workspace = true # https://github.com/rust-random/rand#wasm-support

toml.workspace = true
serde.workspace = true
serde_json.workspace = true
ron.workspace = true
log.workspace = true
clap.workspace = true
url.workspace = true
futures.workspace = true
pin-utils.workspace = true
once_cell.workspace = true
bincode.workspace = true
dyn-clone.workspace = true
maplit.workspace = true
env_logger.workspace = true
backtrace.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
derive_more.workspace = true
itertools.workspace = true
derivative.workspace = true
http.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys.workspace = true
wasm-streams.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc.workspace = true
tinyfiledialogs.workspace = true
directories.workspace = true
threadpool.workspace = true
async-std.workspace = true
reqwest.workspace = true
async-compat.workspace = true
